--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
     "@tsconfig/react-native": "^2.0.2",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
     "@types/react-redux": "^7.1.25",
@@ -30,6 +33,8 @@
     "@types/redux-thunk": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
